Fixing race condition in ParallelDeriver.java