@@ -3,30 +3,32 @@ package cp2025.engine;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import cp2025.engine.Datalog;
 import cp2025.engine.Datalog.Atom;
 import cp2025.engine.Datalog.Constant;
-import cp2025.engine.Datalog.Element;
 import cp2025.engine.Datalog.Predicate;
 import cp2025.engine.Datalog.Program;
 import cp2025.engine.Datalog.Rule;
 import cp2025.engine.Datalog.Variable;
 
+/**
+ * Implementacja wielowątkowego silnika wyprowadzania dla języka Datalog.
+ * Równoległość na poziomie zapytań (nie w obrębie pojedynczego zapytania).
+ */
 public class ParallelDeriver implements AbstractDeriver {
 
     private final int numWorkerThreads;
@@ -43,30 +45,31 @@ public class ParallelDeriver implements AbstractDeriver {
             throws InterruptedException {
 
         List<Atom> queries = program.queries();
-        Map<Atom, Boolean> results = new LinkedHashMap<>();
         if (queries.isEmpty()) {
-            return results;
+            return new LinkedHashMap<>();
         }
 
-        // Wspólny cache: stwierdzenia już rozstrzygnięte (true/false).
-        ConcurrentMap<Atom, Boolean> knownStatements = new ConcurrentHashMap<>();
+        // POPRAWKA #1: JEDEN cache zamiast dwóch (knownTrue i knownFalse)
+        ConcurrentHashMap<Atom, Boolean> knownStatements = new ConcurrentHashMap<>();
 
-        // Wspólny indeks reguł po predykacie w głowie.
-        Map<Predicate, List<Rule>> rulesByPredicate = buildRulesIndex(program);
-
-        // Wspólny rejestr „in progress” dla wszystkich wątków.
-        ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry =
+        // Wspólny rejestr kontekstów "in progress" dla wszystkich wątków.
+        ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry =
                 new ConcurrentHashMap<>();
 
-        // Flaga globalnego przerwania (przerwanie derive()).
-        AtomicBoolean globalCancel = new AtomicBoolean(false);
+        // Flaga globalnego przerwania całego derive().
+        AtomicBoolean globalCancelled = new AtomicBoolean(false);
 
+        // Indeks reguł po predykacie w głowie (niezmienny).
+        Map<Predicate, List<Rule>> rulesByPredicate = buildRulesIndex(program);
+
+        // Tworzymy pulę wątków (nie więcej niż liczba zapytań).
         int poolSize = Math.min(numWorkerThreads, queries.size());
         ExecutorService executor = Executors.newFixedThreadPool(poolSize);
 
         try {
             List<Future<Map.Entry<Atom, Boolean>>> futures = new ArrayList<>();
 
+            // Każde zapytanie przetwarzamy w osobnym zadaniu.
             for (Atom query : queries) {
                 Callable<Map.Entry<Atom, Boolean>> task = () -> {
                     ParallelDeriverState state = new ParallelDeriverState(
@@ -75,42 +78,65 @@ public class ParallelDeriver implements AbstractDeriver {
                             rulesByPredicate,
                             knownStatements,
                             inProgressRegistry,
-                            globalCancel
+                            globalCancelled
                     );
-                    DerivationResult result = state.deriveStatement(query);
-                    return new AbstractMap.SimpleEntry<>(query, result.derivable());
+
+                    // Wyprowadzamy zapytanie; zwracamy zbiór niewyprowadzalnych.
+                    Set<Atom> nonDerivable = state.deriveStatement(query, new HashSet<>());
+                    boolean result = nonDerivable.isEmpty();
+
+                    // Zapisujemy wynik w cache.
+                    if (result) {
+                        Boolean prev = knownStatements.putIfAbsent(query, Boolean.TRUE);
+                        if (prev == null) {
+                            state.notifyOtherInProgress(query, null);
+                        }
+                    } else {
+                        // Na szczycie rekurencji – rozstrzygamy wszystkie failedStatements.
+                        for (Atom a : nonDerivable) {
+                            Boolean prev = knownStatements.putIfAbsent(a, Boolean.FALSE);
+                            if (prev == null) {
+                                state.notifyOtherInProgress(a, null);
+                            }
+                        }
+                    }
+
+                    return new AbstractMap.SimpleEntry<>(query, result);
                 };
+
                 futures.add(executor.submit(task));
             }
 
-            for (Future<Map.Entry<Atom, Boolean>> f : futures) {
+            // Zbieramy wyniki od wszystkich wątków.
+            Map<Atom, Boolean> results = new LinkedHashMap<>();
+            for (Future<Map.Entry<Atom, Boolean>> future : futures) {
                 try {
-                    Map.Entry<Atom, Boolean> entry = f.get();
+                    Map.Entry<Atom, Boolean> entry = future.get();
                     results.put(entry.getKey(), entry.getValue());
-                } catch (InterruptedException e) {
-                    // Przerwanie wątku wywołującego derive() – globalne zakończenie.
-                    globalCancel.set(true);
-                    executor.shutdownNow();
-                    throw e;
                 } catch (ExecutionException e) {
                     Throwable cause = e.getCause();
-                    if (cause instanceof InterruptedException ie) {
-                        // Przerwanie z wątku roboczego traktujemy jako globalne.
-                        globalCancel.set(true);
-                        executor.shutdownNow();
-                        throw ie;
+                    if (cause instanceof InterruptedException) {
+                        throw (InterruptedException) cause;
                     }
                     throw new RuntimeException("Error in worker thread", cause);
                 }
             }
 
             return results;
+
+        } catch (InterruptedException e) {
+            // Globalne przerwanie – sygnalizujemy wszystkim wątkom.
+            globalCancelled.set(true);
+            throw e;
         } finally {
-            // Upewniamy się, że wątki pomocnicze kończą pracę.
+            // Zawsze zamykamy executor – bez wycieków zasobów.
             executor.shutdownNow();
         }
     }
 
+    /**
+     * Buduje indeks reguł po predykacie w głowie dla szybkiego dostępu.
+     */
     private Map<Predicate, List<Rule>> buildRulesIndex(Program program) {
         Map<Predicate, List<Rule>> index = new HashMap<>();
         for (Rule rule : program.rules()) {
@@ -121,19 +147,13 @@ public class ParallelDeriver implements AbstractDeriver {
     }
 
     /**
-     * Wynik próby wyprowadzenia stwierdzenia: czy wyprowadzalne oraz
-     * zbiór „failedStatements” w sensie opisu SimpleDeriver.
-     */
-    private record DerivationResult(boolean derivable, Set<Atom> failedStatements) {
-    }
-
-    /**
-     * Kontekst jednego wątku aktualnie wyprowadzającego dane stwierdzenie.
-     * Umożliwia lokalne anulowanie (bez kończenia całego derive()).
+     * POPRAWKA #2: Thread w InProgressContext
+     * Kontekst wyprowadzania jednego stwierdzenia w konkretnym wątku.
+     * Umożliwia lokalne anulowanie przez inne wątki.
      */
     private static final class InProgressContext {
         final Atom statement;
-        final Thread ownerThread;
+        final Thread ownerThread;  // ← Dla Thread.interrupt()
         volatile boolean cancelled;
 
         InProgressContext(Atom statement) {
@@ -144,209 +164,311 @@ public class ParallelDeriver implements AbstractDeriver {
     }
 
     /**
-     * Stan lokalny wątku przetwarzającego jedno zapytanie,
-     * z dostępem do współdzielonych struktur.
+     * Stan lokalny jednego wątku z dostępem do wspólnych struktur.
      */
-    private static final class ParallelDeriverState {
+    private static class ParallelDeriverState {
 
         private final Program program;
         private final AbstractOracle oracle;
         private final Map<Predicate, List<Rule>> rulesByPredicate;
-        private final ConcurrentMap<Atom, Boolean> knownStatements;
-        private final ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry;
-        private final AtomicBoolean globalCancel;
 
-        // Lokalne inProgress, jak w SimpleDeriver.
-        private final Set<Atom> inProgressStatements = new HashSet<>();
+        // POPRAWKA #1: Wspólny cache wyników (JEDEN zamiast dwóch)
+        private final ConcurrentHashMap<Atom, Boolean> knownStatements;
+
+        // Wspólny rejestr kontekstów "in progress".
+        private final ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry;
+
+        // Flaga globalnego przerwania.
+        private final AtomicBoolean globalCancelled;
 
         ParallelDeriverState(
                 Program program,
                 AbstractOracle oracle,
                 Map<Predicate, List<Rule>> rulesByPredicate,
-                ConcurrentMap<Atom, Boolean> knownStatements,
-                ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry,
-                AtomicBoolean globalCancel) {
+                ConcurrentHashMap<Atom, Boolean> knownStatements,
+                ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry,
+                AtomicBoolean globalCancelled) {
             this.program = program;
             this.oracle = oracle;
             this.rulesByPredicate = rulesByPredicate;
             this.knownStatements = knownStatements;
             this.inProgressRegistry = inProgressRegistry;
-            this.globalCancel = globalCancel;
+            this.globalCancelled = globalCancelled;
         }
 
-        DerivationResult deriveStatement(Atom goal) throws InterruptedException {
-            // Globalne przerwanie.
+        /**
+         * Wyprowadza stwierdzenie, zwracając zbiór niewyprowadzalnych atomów
+         * (jak w SimpleDeriver).
+         *
+         * @param statement stwierdzenie do wyprowadzenia
+         * @param inProgress lokalne stwierdzenia aktualnie wyprowadzane (wykrywanie cykli)
+         * @return pusty zbiór jeśli wyprowadzalne, w p.p. zbiór failedStatements
+         */
+        Set<Atom> deriveStatement(Atom statement, Set<Atom> inProgress)
+                throws InterruptedException {
+
+            // Sprawdź globalne przerwanie.
             checkGlobalInterrupt();
 
-            // Cache: już wiemy.
-            Boolean known = knownStatements.get(goal);
+            // POPRAWKA #1: Sprawdź JEDEN cache atomowo
+            Boolean known = knownStatements.get(statement);
             if (known != null) {
                 if (known) {
-                    return new DerivationResult(true, Set.of());
+                    return Collections.emptySet();
                 } else {
-                    return new DerivationResult(false, Set.of(goal));
+                    Set<Atom> result = new HashSet<>();
+                    result.add(statement);
+                    return result;
                 }
             }
 
-            // Wykrywanie cykli.
-            if (inProgressStatements.contains(goal)) {
-                return new DerivationResult(false, Set.of(goal));
-            }
-
-            // Wyrocznia?
-            if (oracle.isCalculatable(goal.predicate())) {
-                return deriveWithOracle(goal);
-            }
-
-            InProgressContext ctx = new InProgressContext(goal);
-            registerInProgress(ctx);
-            inProgressStatements.add(goal);
-
-            try {
-                DerivationResult result = deriveNewStatement(goal, ctx);
-
-                if (result.derivable()) {
-                    markTrueAndNotify(goal, ctx);
-                } else if (inProgressStatements.isEmpty()) {
-                    // Jak w SimpleDeriver: na szczycie rekurencji
-                    // rozstrzygamy wszystkie failedStatements jako false.
-                    for (Atom s : result.failedStatements()) {
-                        Boolean prev = knownStatements.putIfAbsent(s, Boolean.FALSE);
-                        if (prev == null) {
-                            notifyOtherInProgress(s, null);
-                        }
-                    }
-                }
-
+            // Wykrywanie cykli lokalnych (w tym wątku).
+            if (inProgress.contains(statement)) {
+                Set<Atom> result = new HashSet<>();
+                result.add(statement);
                 return result;
+            }
+
+            // Wyrocznia – obsługa predykatów kalkulowalnych.
+            if (oracle.isCalculatable(statement.predicate())) {
+                return deriveWithOracle(statement);
+            }
+
+            // Rejestrujemy rozpoczęcie wyprowadzania.
+            InProgressContext ctx = new InProgressContext(statement);
+            registerInProgress(ctx);
+
+            inProgress.add(statement);
+            try {
+                return deriveStatementInternal(statement, inProgress, ctx);
             } finally {
-                inProgressStatements.remove(goal);
+                inProgress.remove(statement);
                 unregisterInProgress(ctx);
             }
         }
 
-        private DerivationResult deriveWithOracle(Atom goal) throws InterruptedException {
+        /**
+         * POPRAWKA #4: Prosta implementacja deriveWithOracle bez race conditions
+         */
+        private Set<Atom> deriveWithOracle(Atom statement)
+                throws InterruptedException {
+
+            // Sprawdź ponownie cache (inny wątek mógł już wyliczyć).
+            Boolean cached = knownStatements.get(statement);
+            if (cached != null) {
+                if (cached) {
+                    return Collections.emptySet();
+                } else {
+                    Set<Atom> result = new HashSet<>();
+                    result.add(statement);
+                    return result;
+                }
+            }
+
+            // Wywołaj wyrocznię.
+            boolean value;
             try {
                 checkGlobalInterrupt();
-                boolean value = oracle.calculate(goal);
-                knownStatements.put(goal, value);
-                if (value) {
-                    notifyOtherInProgress(goal, null);
-                    return new DerivationResult(true, Set.of());
-                } else {
-                    return new DerivationResult(false, Set.of(goal));
-                }
+                value = oracle.calculate(statement);
             } catch (InterruptedException e) {
-                // Rozróżnienie: globalne czy lokalne?
-                if (globalCancel.get()) {
+                // Rozróżnienie: globalne czy lokalne przerwanie?
+                if (globalCancelled.get()) {
                     // Globalne – przerywamy całe derive().
                     throw e;
                 }
-                // Lokalne przerwanie (np. inny wątek rozstrzygnął to stwierdzenie).
-                Thread.interrupted(); // wyczyść flagę.
-                Boolean known = knownStatements.get(goal);
+
+                // Lokalne przerwanie – inny wątek ustalił wynik.
+                // Sprawdź cache i użyj tego wyniku.
+                Boolean known = knownStatements.get(statement);
                 if (known != null) {
                     if (known) {
-                        return new DerivationResult(true, Set.of());
+                        return Collections.emptySet();
                     } else {
-                        return new DerivationResult(false, Set.of(goal));
+                        Set<Atom> result = new HashSet<>();
+                        result.add(statement);
+                        return result;
                     }
                 }
-                // Konserwatywnie traktujemy jako „nie do wyprowadzenia bez inProgress”.
-                return new DerivationResult(false, Set.of(goal));
+
+                // Konserwatywnie: niewyprowadzalne bez użycia inProgress.
+                Set<Atom> result = new HashSet<>();
+                result.add(statement);
+                return result;
+            }
+
+            // Zapisz wynik atomowo.
+            Boolean prev = knownStatements.putIfAbsent(statement, value);
+            if (prev == null) {
+                // To my pierwszy raz zapisujemy – powiadom inne wątki.
+                notifyOtherInProgress(statement, null);
+            }
+
+            if (value) {
+                return Collections.emptySet();
+            } else {
+                Set<Atom> result = new HashSet<>();
+                result.add(statement);
+                return result;
             }
         }
 
-        private DerivationResult deriveNewStatement(Atom goal, InProgressContext ctx)
+        /**
+         * POPRAWKA #3: Używa Unifier.unify() przed generowaniem podstawień
+         */
+        private Set<Atom> deriveStatementInternal(
+                Atom statement,
+                Set<Atom> inProgress,
+                InProgressContext ctx)
                 throws InterruptedException {
 
-            List<Rule> rules = rulesByPredicate.get(goal.predicate());
-            if (rules == null || rules.isEmpty()) {
-                return new DerivationResult(false, Set.of(goal));
+            // Sprawdź czy inny wątek anulował wyprowadzanie tego stwierdzenia.
+            Set<Atom> cancelledResult = checkLocalCancellation(statement, ctx);
+            if (cancelledResult != null) {
+                return cancelledResult;
             }
 
-            Set<Atom> failedStatements = new HashSet<>();
+            Predicate predicate = statement.predicate();
+            List<Rule> rules = rulesByPredicate.get(predicate);
+            if (rules == null || rules.isEmpty()) {
+                // Brak reguł – niewyprowadzalne.
+                Set<Atom> result = new HashSet<>();
+                result.add(statement);
+                return result;
+            }
+
+            Set<Atom> allFailedStatements = new HashSet<>();
 
             for (Rule rule : rules) {
-                // Lokalne anulowanie tego stwierdzenia.
-                DerivationResult cancelled = checkLocalCancellation(goal, ctx);
-                if (cancelled != null) {
-                    return cancelled;
+                // Sprawdź lokalne anulowanie przed każdą regułą.
+                cancelledResult = checkLocalCancellation(statement, ctx);
+                if (cancelledResult != null) {
+                    return cancelledResult;
                 }
-
                 checkGlobalInterrupt();
 
-                // Unifikacja głowy z celem (jak w SimpleDeriver).
-                java.util.Optional<List<Atom>> partiallyAssignedBodyOpt =
-                        Unifier.unify(rule, goal);
+                // Sprawdź cache ponownie (inny wątek mógł rozstrzygnąć).
+                Boolean known = knownStatements.get(statement);
+                if (known != null) {
+                    if (known) {
+                        return Collections.emptySet();
+                    } else {
+                        Set<Atom> result = new HashSet<>();
+                        result.add(statement);
+                        return result;
+                    }
+                }
+
+                // POPRAWKA #3: Unifikacja NAJPIERW – dopasuj głowę reguły do celu
+                Optional<List<Atom>> partiallyAssignedBodyOpt =
+                        Unifier.unify(rule, statement);
+
                 if (partiallyAssignedBodyOpt.isEmpty()) {
+                    // Głowa nie pasuje do celu – próbuj następną regułę.
                     continue;
                 }
 
                 List<Atom> partiallyAssignedBody = partiallyAssignedBodyOpt.get();
-                List<Variable> variables = Datalog.getVariables(partiallyAssignedBody);
 
-                if (variables.isEmpty()) {
-                    DerivationResult bodyRes = deriveBody(partiallyAssignedBody, ctx);
-                    if (bodyRes.derivable()) {
-                        return new DerivationResult(true, Set.of());
+                // Zbierz zmienne, które pozostały nieprzypisane po unifikacji.
+                List<Variable> remainingVariables =
+                        Datalog.getVariables(partiallyAssignedBody);
+
+                if (remainingVariables.isEmpty()) {
+                    // Brak zmiennych – ciało już w pełni podstawione.
+                    Set<Atom> bodyNonDerivable =
+                            deriveBody(partiallyAssignedBody, inProgress, ctx);
+                    if (bodyNonDerivable.isEmpty()) {
+                        // Wyprowadziliśmy ciało – statement jest wyprowadzalne.
+                        markTrueAndNotify(statement, ctx);
+                        return Collections.emptySet();
                     }
-                    failedStatements.addAll(bodyRes.failedStatements());
+                    allFailedStatements.addAll(bodyNonDerivable);
                     continue;
                 }
 
-                // Wszystkie podstawienia zmiennych w ciele.
-                FunctionGenerator<Variable, Constant> iterator =
-                        new FunctionGenerator<>(variables, program.constants());
+                // Iteruj po wszystkich podstawieniach dla POZOSTAŁYCH zmiennych.
+                FunctionGenerator funcGen =
+                        new FunctionGenerator(remainingVariables, program.constants());
 
-                for (Map<Variable, Constant> assignment : iterator) {
-                    DerivationResult cancelled2 = checkLocalCancellation(goal, ctx);
-                    if (cancelled2 != null) {
-                        return cancelled2;
+                for (Object assignmentObj : funcGen) {
+                    // Sprawdź anulowanie w każdej iteracji.
+                    cancelledResult = checkLocalCancellation(statement, ctx);
+                    if (cancelledResult != null) {
+                        return cancelledResult;
                     }
-
                     checkGlobalInterrupt();
 
-                    List<Atom> assignedBody =
+                    // Sprawdź cache ponownie.
+                    known = knownStatements.get(statement);
+                    if (known != null) {
+                        if (known) {
+                            return Collections.emptySet();
+                        } else {
+                            Set<Atom> result = new HashSet<>();
+                            result.add(statement);
+                            return result;
+                        }
+                    }
+
+                    @SuppressWarnings("unchecked")
+                    Map<Variable, Constant> assignment =
+                            (Map<Variable, Constant>) assignmentObj;
+
+                    // Podstaw pozostałe zmienne w ciele.
+                    List<Atom> fullyAssignedBody =
                             Unifier.applyAssignment(partiallyAssignedBody, assignment);
 
-                    DerivationResult bodyRes = deriveBody(assignedBody, ctx);
-                    if (bodyRes.derivable()) {
-                        return new DerivationResult(true, Set.of());
+                    Set<Atom> bodyNonDerivable =
+                            deriveBody(fullyAssignedBody, inProgress, ctx);
+                    if (bodyNonDerivable.isEmpty()) {
+                        // Wyprowadziliśmy ciało – statement jest wyprowadzalne.
+                        markTrueAndNotify(statement, ctx);
+                        return Collections.emptySet();
                     }
-                    failedStatements.addAll(bodyRes.failedStatements());
+
+                    allFailedStatements.addAll(bodyNonDerivable);
                 }
             }
 
-            failedStatements.add(goal);
-            return new DerivationResult(false, failedStatements);
+            // Żadna reguła nie pozwoliła wyprowadzić – zwracamy failed.
+            allFailedStatements.add(statement);
+            return allFailedStatements;
         }
 
-        private DerivationResult deriveBody(List<Atom> body, InProgressContext parentCtx)
+        /**
+         * Wyprowadza ciało reguły (listę atomów).
+         */
+        private Set<Atom> deriveBody(
+                List<Atom> body,
+                Set<Atom> inProgress,
+                InProgressContext parentCtx)
                 throws InterruptedException {
 
-            Set<Atom> failedStatements = new HashSet<>();
+            Set<Atom> allNonDerivable = new HashSet<>();
 
-            for (Atom statement : body) {
-                // Jeśli nadrzędne stwierdzenie zostało lokalnie anulowane,
-                // przerywamy jak na wyższym poziomie.
-                DerivationResult cancelled = checkLocalCancellation(parentCtx.statement, parentCtx);
+            for (Atom atom : body) {
+                // Sprawdź czy nadrzędne wyprowadzanie zostało anulowane.
+                Set<Atom> cancelled = checkLocalCancellation(parentCtx.statement, parentCtx);
                 if (cancelled != null) {
                     return cancelled;
                 }
-
                 checkGlobalInterrupt();
 
-                DerivationResult result = deriveStatement(statement);
-                if (!result.derivable()) {
-                    failedStatements.addAll(result.failedStatements());
-                    return new DerivationResult(false, failedStatements);
+                Set<Atom> atomNonDerivable = deriveStatement(atom, inProgress);
+                if (!atomNonDerivable.isEmpty()) {
+                    // Ta przesłanka jest niewyprowadzalna – ciało niewyprowadzalne.
+                    allNonDerivable.addAll(atomNonDerivable);
+                    return allNonDerivable;
                 }
             }
 
-            return new DerivationResult(true, Set.of());
+            // Wszystkie przesłanki wyprowadzalne – ciało wyprowadzalne.
+            return Collections.emptySet();
         }
 
+        /**
+         * Rejestruje rozpoczęcie wyprowadzania danego stwierdzenia.
+         */
         private void registerInProgress(InProgressContext ctx) {
             inProgressRegistry.compute(ctx.statement, (atom, set) -> {
                 if (set == null) {
@@ -357,6 +479,9 @@ public class ParallelDeriver implements AbstractDeriver {
             });
         }
 
+        /**
+         * Usuwa kontekst z rejestru po zakończeniu wyprowadzania.
+         */
         private void unregisterInProgress(InProgressContext ctx) {
             inProgressRegistry.computeIfPresent(ctx.statement, (atom, set) -> {
                 set.remove(ctx);
@@ -364,67 +489,68 @@ public class ParallelDeriver implements AbstractDeriver {
             });
         }
 
+        /**
+         * Sprawdza globalne przerwanie całego derive().
+         */
+        private void checkGlobalInterrupt() throws InterruptedException {
+            if (globalCancelled.get() || Thread.currentThread().isInterrupted()) {
+                throw new InterruptedException("Derivation interrupted");
+            }
+        }
+
+        /**
+         * Sprawdza czy lokalne wyprowadzanie zostało anulowane przez inny wątek.
+         * Jeśli tak, używa wyniku z globalnego cache.
+         */
+        private Set<Atom> checkLocalCancellation(Atom statement, InProgressContext ctx) {
+            if (!ctx.cancelled) {
+                return null;
+            }
+
+            // POPRAWKA #1: Anulowane – sprawdź JEDEN cache
+            Boolean known = knownStatements.get(statement);
+            if (known != null) {
+                if (known) {
+                    return Collections.emptySet();
+                } else {
+                    Set<Atom> result = new HashSet<>();
+                    result.add(statement);
+                    return result;
+                }
+            }
+
+            // Konserwatywnie: niewyprowadzalne bez użycia inProgress.
+            Set<Atom> result = new HashSet<>();
+            result.add(statement);
+            return result;
+        }
+
+        /**
+         * Zaznacza stwierdzenie jako wyprowadzalne i powiadamia inne wątki.
+         */
         private void markTrueAndNotify(Atom statement, InProgressContext currentCtx) {
             Boolean prev = knownStatements.putIfAbsent(statement, Boolean.TRUE);
             if (prev == null) {
+                // To my pierwszy raz zapisujemy – powiadom inne wątki.
                 notifyOtherInProgress(statement, currentCtx);
             }
         }
 
         /**
-         * Ustawia flagę anulowania i wywołuje Thread.interrupt()
-         * na wszystkich innych wątkach wyprowadzających to samo stwierdzenie.
-         * Wątki odróżniają to od globalnego przerwania dzięki globalCancel.
+         * POPRAWKA #2: Powiadamia wszystkie inne wątki z interrupt()
+         * Ustawia flagę anulowania i przerywa wątek (dla oracle.calculate()).
          */
-        private void notifyOtherInProgress(Atom statement, InProgressContext currentCtx) {
+        void notifyOtherInProgress(Atom statement, InProgressContext currentCtx) {
             Set<InProgressContext> contexts = inProgressRegistry.get(statement);
             if (contexts == null) {
                 return;
             }
+
             for (InProgressContext ctx : contexts) {
                 if (ctx != currentCtx) {
                     ctx.cancelled = true;
-                    // Przerywamy potencjalne oracle.calculate().
+                    // KRYTYCZNE: przerwij wątek, żeby zakończyć oracle.calculate().
                     ctx.ownerThread.interrupt();
-                }
-            }
-        }
-
-        /**
-         * Sprawdza, czy to stwierdzenie zostało lokalnie anulowane przez inny wątek
-         * i w razie czego korzysta z globalnego cache jakby wynik był wyprowadzony lokalnie.
-         */
-        private DerivationResult checkLocalCancellation(Atom statement, InProgressContext ctx) {
-            if (!ctx.cancelled) {
-                return null;
-            }
-            Boolean known = knownStatements.get(statement);
-            if (known != null) {
-                if (known) {
-                    return new DerivationResult(true, Set.of());
-                } else {
-                    return new DerivationResult(false, Set.of(statement));
-                }
-            }
-            // Konserwatywnie: niewyprowadzalne bez użycia inProgress.
-            return new DerivationResult(false, Set.of(statement));
-        }
-
-        /**
-         * Sprawdza globalne przerwanie (z zewnątrz derive()).
-         * Jeśli globalCancel ustawione lub bieżący wątek ma przerwanie
-         * i globalCancel już ustawione, rzuca InterruptedException.
-         */
-        private void checkGlobalInterrupt() throws InterruptedException {
-            if (globalCancel.get()) {
-                throw new InterruptedException("Derivation cancelled");
-            }
-            if (Thread.interrupted()) {
-                // Jeśli ktoś nas przerwał, ale globalCancel jeszcze nie jest ustawione,
-                // traktujemy to jako potencjalne lokalne przerwanie; globalne
-                // rozpoznajemy dopiero gdy globalCancel zostanie ustawione.
-                if (globalCancel.get()) {
-                    throw new InterruptedException("Derivation cancelled");
                 }
             }
         }
